WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291039
REGRESSION(
291510@main
): Web Inspector: Safari Technology Preview 216 WebContent crash when using Develop menu item "Show JavaScript Console"
https://bugs.webkit.org/show_bug.cgi?id=291039
Summary
REGRESSION(291510@main): Web Inspector: Safari Technology Preview 216 WebCont...
Jeff Johnson
Reported
2025-04-03 16:56:18 PDT
Created
attachment 474820
[details]
Crash log Steps to reproduce: 1) Open a new window. The URL doesn't matter; it can even be an empty page. 2) Select "Show JavaScript Console" from the Develop menu, or press option-command-c. This crash also occurs with Show Page Source and Show Page Resources but not with Show Web Inspector. The bug did not exist in Safari Technology Preview 215.
Attachments
Crash log
(32.22 KB, text/plain)
2025-04-03 16:56 PDT
,
Jeff Johnson
no flags
Details
Post-crash web inspector window
(284.36 KB, image/png)
2025-04-03 16:58 PDT
,
Jeff Johnson
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Jeff Johnson
Comment 1
2025-04-03 16:58:22 PDT
Created
attachment 474821
[details]
Post-crash web inspector window I also sometimes see a funky looking separate web inspector window after the crash, even though I've set the web inspector to dock to the bottom.
Radar WebKit Bug Importer
Comment 2
2025-04-03 17:41:01 PDT
<
rdar://problem/148560331
>
Razvan Caliman
Comment 3
2025-04-04 05:39:43 PDT
THis
Razvan Caliman
Comment 4
2025-04-04 05:40:31 PDT
This is a regression caused by a change in
https://commits.webkit.org/291510@main
Thanks for filing!
Chris Dumez
Comment 5
2025-04-04 08:19:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43642
EWS
Comment 6
2025-04-04 14:16:29 PDT
Committed
293268@main
(8e75a6a07670): <
https://commits.webkit.org/293268@main
> Reviewed commits have been landed. Closing PR #43642 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug