REGRESSION(291510@main): Web Inspector: Safari Technology Preview 216 WebContent crash when using Develop menu item "Show JavaScript Console" https://bugs.webkit.org/show_bug.cgi?id=291039 rdar://148560331

Reviewed by Per Arne Vollan and Devin Rousso.

We were doing a null dereference of the frontendConnection in the lambda in the case
where m_frontendConnection was null before `whenFrontendConnectionEstablished()` was
called. This is because we were capturing the frontendConnection pointer as soon as
`whenFrontendConnectionEstablished()` instead of using `m_frontendConnection` when
the lambda actually gets called later on.

I refactored the code to pass the frontend connection to the lambda to make this
less error-prone.

* Source/WebKit/WebProcess/Inspector/WebInspectorInternal.cpp:
(WebKit::WebInspector::setFrontendConnection):
(WebKit::WebInspector::whenFrontendConnectionEstablished):
(WebKit::WebInspector::showConsole):
(WebKit::WebInspector::showResources):
(WebKit::WebInspector::showMainResourceForFrame):
(WebKit::WebInspector::startPageProfiling):
(WebKit::WebInspector::stopPageProfiling):
(WebKit::WebInspector::startElementSelection):
(WebKit::WebInspector::stopElementSelection):
* Source/WebKit/WebProcess/Inspector/WebInspectorInternal.h:

Canonical link: https://commits.webkit.org/293268@main